Mysql Database Setup

--- a/vans-backend/src/main/resources/application.properties
+++ b/vans-backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=vans-backend
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/vans
+spring.datasource.username=vans
+spring.datasource.password=VANS@Secret1
+#spring.security.user.name=admin
+#spring.security.user.password=test
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
